--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,15 +1,16 @@
 Package: oc
-Version: 0.93
-Date: 2012-01-24
+Version: 0.95
+Date: 2014-09-25
 Title: OC Roll Call Analysis Software.
-Author: Keith Poole <kpoole@ucsd.edu>, Jeffrey Lewis
-        <jblewis@ucla.edu>, James Lo <jameslo@ucla.edu> and Royce
-        Carroll <rcarroll@ucsd.edu>
-Maintainer: James Lo <jameslo@ucla.edu>
+Author: Keith Poole <ktpoole@uga.edu>, Jeffrey Lewis
+        <jblewis@ucla.edu>, James Lo <jameslo@princeton.edu> and Royce
+        Carroll <rcarroll@rice.edu>
+Maintainer: James Lo <jameslo@princeton.edu>
 Depends: R (>= 2.3.1), pscl (>= 0.59)
 Description: Estimates Optimal Classification scores from roll call
         votes supplied though a 'rollcall' object from package 'pscl'.
 License: GPL-2
 Repository: CRAN
-Date/Publication: 2012-01-24 16:52:48
-Packaged: 2012-01-24 14:37:08 UTC; jalo
+Date/Publication: 2014-09-26 19:05:36
+Packaged: 2014-09-25 23:15:49 UTC; jameslo
+NeedsCompilation: yes
