--- a/.github/workflows/R-CMD-check.yaml
+++ b/.github/workflows/R-CMD-check.yaml
@@ -32,6 +32,8 @@ jobs:
       - uses: actions/checkout@v3
 
       - uses: r-lib/actions/setup-tinytex@v2
+      - name: Install ae LaTeX package
+	run: tlmgr install ae
 
       - uses: r-lib/actions/setup-pandoc@v2
 
