--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,6 +18,8 @@ Description: Estimates optimal classification (Poole 2000) <doi:10.1093/oxfordjo
 		scores from roll call votes supplied though a 'rollcall'
 		object from package 'pscl'.
 License: GPL-2
+URL: https://github.com/wmay/oc
+BugReports: https://github.com/wmay/oc/issues
 Repository: CRAN
 NeedsCompilation: yes
 RoxygenNote: 6.0.1
